--- a/Consult/Consult.css
+++ b/Consult/Consult.css
@@ -1,5 +1,16 @@
-body{
+@font-face {
+    font-family: 'GangwonState';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+.gangwon-font {
+    font-family: 'GangwonState', sans-serif;
+}
+.display-container{
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 a {
     text-decoration: none;
@@ -60,6 +71,83 @@ a {
 .navbar_toggleBtn:hover i:hover {
     color: #f0f4f5;
 }
+
+/* Header section */
+.header_section {
+    background-color: #f5f7fa;
+}
+.header p {
+    font-size: 24px;
+    margin: 8px;
+}
+.header_line {
+    border-top: 1px black solid;
+}
+input::placeholder {
+    font-size: 12px;
+    padding-left: 10px;
+    color: #9d9d9d;
+}
+.search_section {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+}
+.search_bar {
+    display: flex;
+    position: absolute;
+    margin-right: 155px;
+}
+.search_bar input {
+    width:250px;
+    height: 45px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    border: 2px solid #9d9d9d;
+}
+.searchBtn {
+    display: flex;
+    position: absolute;
+    margin-left: 140px;
+}
+.searchBtn button {
+    background-color: #f2f2f2;
+    border: 2px solid #9d9d9d;
+    width: 45px;
+    height: 45px;
+    border-radius: 5px;
+    padding: 10px;
+}
+.searchBtn i {
+    color: #9d9d9d;
+    padding: px;
+}
+.categoryBtn {
+    width: 70px;   
+    height: 45px;
+    display: flex;
+    position: absolute;
+    background-color: #f2f2f2;
+    border: 2px solid #9d9d9d;
+    margin-left: 255px;
+    border-radius: 5px;
+}
+.categoryBtn button {
+    color: #9d9d9d;
+    padding-top: 12px;
+    padding-left: 12px;
+    font-size: 12px;
+    border: none;
+}
+.consult_img {
+    margin-left: 1250px;
+    overflow: hidden;
+    width: 250px;
+    height: 250px;
+    margin-top: -30px;
+}
+
 
 
 @media screen and (max-width: 576px) {
