로고수정&fixed top 추가

--- a/Category/Category.css
+++ b/Category/Category.css
@@ -25,8 +25,9 @@ a{
     font-size: 20px;
     color: #f0f4f5;
 }
-.navbar_logo i{
-    color: #d49466;/* 색상 설정하기 */
+.navbar_logo img {
+    width: 130px;
+    height: 25px;
 }
 .navbar_menu {
     display: flex;
@@ -71,6 +72,9 @@ a{
 }
 
 /*header*/
+.content {
+    margin-top: 65px;
+}
 .main_category{
     display:flex;
     justify-content: space-around;
