--- a/Category/Category.css
+++ b/Category/Category.css
@@ -21,9 +21,12 @@ a{
     background-color: #033075;
     padding: 8px 12px;
 }
-.navbar_logo img {
-    width: 130px;
-    height: 25px;
+.navbar_logo {
+    font-size: 20px;
+    color: #f0f4f5;
+}
+.navbar_logo i{
+    color: #d49466;/* 색상 설정하기 */
 }
 .navbar_menu {
     display: flex;
@@ -68,9 +71,6 @@ a{
 }
 
 /*header*/
-.content {
-    margin-top: 65px;
-}
 .main_category{
     display:flex;
     justify-content: space-around;
