--- a/Consult/Consult.css
+++ b/Consult/Consult.css
@@ -9,23 +9,23 @@
 }
 .display-container{
     margin: 0;
-    width: 100%;
-    height: 100%;
+    max-width: 1200px;   
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 100vh;
 }
 a {
     text-decoration: none;
-    color: #f0f4f5;
 }
+/* navbar section */
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background-color: #033075;
     padding: 8px 12px;
 }
 .navbar_logo img {
     width: 130px;
     height: 25px;
+    margin-left: 20px;
 }
 .navbar_menu {
     display: flex;
@@ -35,6 +35,9 @@ a {
 }
 .navbar_menu li {
     padding: 8px 12px;
+}
+.navbar a {
+    color: white;
 }
 .navbar_menu li:hover {
     background-color: #f0f4f5;
@@ -49,13 +52,16 @@ a {
     display: flex;
     padding-left: 0;
     margin-bottom: 0;
+    margin-right: 20px;
     font-size: 12px;
 }
-.navbar_login:hover {
+.navbar_login li:hover {
     background-color: #f0f4f5;
     border-radius: 4px;
-    color: #033075;
     padding: 8px 4px;
+}
+.navbar_login li:hover > a {
+    color: #033075;
 }
 .navbar_login i{
     padding-left: 5px;
@@ -74,12 +80,12 @@ a {
 /* Header section */
 .header_section {
     background-color: #f5f7fa;
-    margin-top: 65px;
+    margin-top: 56px;
 }
 .header p {
     font-size: 32px;
     margin: 8px;
-    padding: 0 16px;
+    padding: 10px 0 0 16px;
 }
 .header_line {
     border-top: 1px black solid;
@@ -142,8 +148,7 @@ input::placeholder {
     border: none;
 }
 .consult_img {
-    margin-left: 1250px;
-    overflow: hidden;
+    margin-left: 900px;
     width: 250px;
     height: 250px;
     margin-top: -30px;
@@ -157,7 +162,7 @@ input::placeholder {
     font-size:16px;
     stroke:2px solid #033075;
     color:#9D9D9D;
-    margin:23px 11px 0px 100px;
+    margin:23px 11px 0px 10px;
     padding: 0 8px;
     border-radius: 5px;
 }
@@ -174,8 +179,7 @@ input::placeholder {
 .writeBtn {
     display: flex;
     position: absolute;
-    top: 365px;
-    right: 110px; 
+    margin: 23px 11px 0 1070px;
 }
 .writeBtn button {
     color: white;
@@ -187,15 +191,24 @@ input::placeholder {
     width: 120px;
     height: 47px;
 }
+.consult_list a .header {
+    color: black;
+    font-size: 30px;
+    padding: 20px;
+}
+.consult_list a .content, .answer {
+    color: #9d9d9d;
+    font-size: 20px;
+    padding: 10px 30px;
+}
 .question_box {
     border: 1px solid #033075;
     border-radius: 15px;
-    width: 1200px;
-    height: 300px;
-    display: flex;
-    justify-content: center;
+    width: 1000px;
+    height: 250px;
+    margin: 50px 100px 50px 0;
+    margin-left: 100px;
 }
-
 
 @media screen and (max-width: 576px) {
     .navbar {
