--- a/SignUp/SU.css
+++ b/SignUp/SU.css
@@ -1,10 +1,12 @@
 body {
-    background-color: #033075 !important;
+    background-color: #033075;
 }
-.display-container {
+.display-container{
     margin: 0;
-    width: 100%;
-    height: 100%;
+    max-width: 1200px;   
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 100vh;
 }
 .headerpart {
     position: relative;
@@ -13,33 +15,50 @@ body {
     display: flex;
     position: absolute;
     color: white;
-    font-size: 80px;
+    font-size: 100px;
     font-weight: 550;
-    margin-top: 250px;
-    margin-left: 200px;
+    margin-top: 180px;
+}
+.login_subheader {
+    position: absolute;
+    color: white;
+    font-size: 15px;
+    margin-top: 330px;
+    margin-left: 20px;
 }
 
 .SignUpBtn {
     display: flex;
     flex-direction: column;
-    margin-left: 220px;
-    width: 240px !important;
-    height: 50px !important;
+    margin-left: 20px;
 }
 .SignUpBtn button {
-    padding: 10px 10px 10px 10px;
+    padding: 10px 80px 10px 15px;
     background-color: #033075;
     color: white;
     border: white solid 2px;
     font-size: 18px;
     font-weight: 600;
-    margin-top: 450px;
+    margin-top: 400px;
+}
+.notmemberBtn {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+.notmemberBtn button {
+    padding: 10px 70px 10px 15px;
+    background-color: #033075;
+    color: white;
+    border: white solid 2px;
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 15px;
 }
 button:hover {
     color: #033075;
     background-color: white;
 }
-
 /* tool-part */
 .login_border {
     border: 5px solid transparent;
@@ -49,12 +68,13 @@ button:hover {
     width: 350px !important;
     height: 550px;
     border-radius: 15px;
-    box-shadow: -5px 5px 7px ;
+    box-shadow: -5px 5px 7px;
+    margin-top: -50px;
 }
 .login_tool {
     display: flex;
     justify-content: center;
-    margin-left: 1000px;
+    margin-left: 850px;
 }
 .login_border {
     position: absolute;
