--- a/main/style.css
+++ b/main/style.css
@@ -9,23 +9,23 @@
 }
 .display-container{
     margin: 0;
-    width: 100%;
-    height: 100%;
+    max-width: 1200px;   
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 100vh;
 }
 a {
     text-decoration: none;
-    color: #f0f4f5;
 }
+/* navbar section */
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background-color: #033075;
     padding: 8px 12px;
 }
 .navbar_logo img {
     width: 130px;
     height: 25px;
+    margin-left: 20px;
 }
 .navbar_menu {
     display: flex;
@@ -35,6 +35,9 @@ a {
 }
 .navbar_menu li {
     padding: 8px 12px;
+}
+.navbar a {
+    color: white;
 }
 .navbar_menu li:hover {
     background-color: #f0f4f5;
@@ -49,13 +52,16 @@ a {
     display: flex;
     padding-left: 0;
     margin-bottom: 0;
+    margin-right: 20px;
     font-size: 12px;
 }
-.navbar_login:hover {
+.navbar_login li:hover {
     background-color: #f0f4f5;
     border-radius: 4px;
-    color: #033075;
     padding: 8px 4px;
+}
+.navbar_login li:hover > a {
+    color: #033075;
 }
 .navbar_login i{
     padding-left: 5px;
@@ -65,7 +71,6 @@ a {
     position: absolute;
     right: 32px;
     font-size: 20px;
-    color: #d49466  ;
 }
 .navbar_toggleBtn:hover i:hover {
     color: #f0f4f5;
