SU.css, FP.css수정

--- a/FirstPage/FP.css
+++ b/FirstPage/FP.css
@@ -1,3 +1,4 @@
+/* basic option */
 body {
     background-color: #033075;
 }
@@ -8,6 +9,8 @@ body {
     margin-right: auto;
     min-height: 100vh;
 }
+
+/* header section */
 .headerpart {
     position: relative;
 }
@@ -58,6 +61,7 @@ button:hover {
     color: #033075;
     background-color: white;
 }
+
 /* tool-part */
 .login_border {
     border: 5px solid transparent;
@@ -103,7 +107,7 @@ input::placeholder {
     background-color: transparent;
     border: 1px solid white;
     padding: 4px 10px;
-    width: 290px;
+    width: 280px;
     height: 40px;
     border-radius: 8px;
     color: white;
@@ -115,7 +119,7 @@ input::placeholder {
     background-color: transparent;
     border: 1px solid white;
     padding: 4px 10px;
-    width: 290px;
+    width: 280px;
     height: 40px;
     border-radius: 8px;
     color: white;
@@ -154,7 +158,7 @@ input::placeholder {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 60px;
 }
 .tool_loginBtn button {
     background: linear-gradient( to right, #2e4cee, #030e74 );
