--- a/SignUp/SU.css
+++ b/SignUp/SU.css
@@ -1,3 +1,4 @@
+/* basic option */
 body {
     background-color: #033075;
 }
@@ -8,6 +9,8 @@ body {
     margin-right: auto;
     min-height: 100vh;
 }
+
+/* header section */
 .headerpart {
     position: relative;
 }
@@ -104,7 +107,7 @@ input::placeholder {
     background-color: transparent;
     border: 1px solid white;
     padding: 4px 10px;
-    width: 290px;
+    width: 280px;
     height: 40px;
     border-radius: 8px;
     color: white;
@@ -116,7 +119,7 @@ input::placeholder {
     background-color: transparent;
     border: 1px solid white;
     padding: 4px 10px;
-    width: 290px;
+    width: 280px;
     height: 40px;
     border-radius: 8px;
     color: white;
@@ -128,7 +131,7 @@ input::placeholder {
     background-color: transparent;
     border: 1px solid white;
     padding: 4px 10px;
-    width: 290px;
+    width: 280px;
     height: 40px;
     border-radius: 8px;
     color: white;
@@ -140,7 +143,7 @@ input::placeholder {
     background-color: transparent;
     border: 1px solid white;
     padding: 4px 10px;
-    width: 290px;
+    width: 280px;
     height: 40px;
     border-radius: 8px;
     color: white;
@@ -157,7 +160,7 @@ input::placeholder {
     border-radius: 10px !important;
     border: none;
     font-size: 17px;
-    width: 290px;
+    width: 280px;
     color: white;
     filter: drop-shadow(2px 2px 3px #000000);
 }
