--- a/MyPage/MP.css
+++ b/MyPage/MP.css
@@ -153,5 +153,47 @@ a {
     border-radius: 5px;
     width: 80px;
     height: 30px;
-    margin-top: 10px;
+    margin: 10px 0;
 }
+.tab {
+    width: 1200px;
+    height: 80px;
+    margin-left: 160px;
+    margin-top: 50px;
+    overflow: hidden;
+    border-bottom: 1px solid black;
+  }
+  
+  /* Style the buttons inside the tab */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding-bottom: 10px;
+    margin-right: 15px;
+    transition: 0.3s;
+    font-size: 26px;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    color: #0054f6;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    color: #0054f6;
+    border-bottom: 3px solid #0054f6;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: none;
+    border-top: none;
+    width: 1200px;
+    margin-left: 160px;
+  }
