--- a/main/style.css
+++ b/main/style.css
@@ -8,7 +8,7 @@
     font-family: 'GangwonState', sans-serif;
 }
 .display-container{
-    margin: 0;
+    margin: auto;
     max-width: 1200px;   
     margin-left: auto;
     margin-right: auto;
