--- a/MyPage/MP.css
+++ b/MyPage/MP.css
@@ -190,11 +190,14 @@ a {
   
   /* Style the tab content */
   .tabcontent {
-    display: none; 
+     display: none; 
     padding: 6px 12px;
     border: none;
     width: 1200px;
     margin-left: 160px;
+  }
+  .tabcontent a {
+    color: #9d9d9d;
   }
   .tablist .inheader{
     width:200px;
@@ -203,6 +206,13 @@ a {
     text-overflow:ellipsis;
     white-space:nowrap;
   }
+  .tablist {
+    border: 1px solid #9d9d9d;
+    background-color: #F2F2F2;
+    border-radius: 5px;
+    width: 1000px;
+    margin-left: 100px;
+}
   .tabcontent p {
     margin-top: 10px;
     margin-left: 15px;
