--- a/Education/Education.css
+++ b/Education/Education.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: 'GangwonState';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
@@ -79,50 +78,87 @@ a {
 }
 
 /*header*/
-.header{
-    background-color: #f0f4f5;
+.header_section {
+    background-color: #f5f7fa;
+    margin-top: 56px;
 }
-.header .title{
-    margin-left:20px;
-    padding-top:20px;
-    font-size:50px;
+.header p {
+    font-size: 32px;
+    margin: 8px;
+    padding: 10px 0 0 16px;
 }
-.header hr{
-    height: 3px;
-    background-color: #000000;
+.header_line {
+    border-top: 1px black solid;
 }
-.header .sub{
+input::placeholder {
+    font-size: 12px;
+    padding-left: 10px;
+    color: #9d9d9d;
+}
+.search_section {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+}
+.search_bar {
+    display: flex;
+    position: absolute;
+    margin-right: 155px;
+}
+.search_bar input {
+    width:250px;
+    height: 45px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    border: 2px solid #9d9d9d;
+}
+.searchBtn {
+    display: flex;
+    position: absolute;
+    margin-left: 140px;
+}
+.searchBtn button {
+    background-color: #f2f2f2;
+    border: 2px solid #9d9d9d;
+    width: 45px;
+    height: 45px;
+    border-radius: 5px;
+    padding: 10px;
+}
+.searchBtn i {
+    color: #9d9d9d;
+    padding: px;
+}
+.consult_img {
+    margin-left: 980px;
+    width: 220px;
+    height: 220px;
+    margin-top: -22px;
+}
+/* category section */
+.category{
     display:flex;
 }
-.header .search_form{
-    padding-top:60px;
-}
-.header .search_education{
-    width:500px;
-    height:50px;
-    background-color: #F2F2F2;
-    margin-left:700px;
-    border-radius: 5px;
-}
-.header .submit_education{
-    width:60px;
-    height:50px;
-    background-color: #F2F2F2;
+.category .optional #ed_target{
+    width:120px;
+    height:47px;
+    font-size:16px;
+    stroke:2px solid #033075;
     color:#9D9D9D;
+    margin:23px 11px 0px 10px;
+    padding: 0 8px;
     border-radius: 5px;
 }
-.header .category_education{
-    width:80px;
-    height:50px;
-    background-color: #F2F2F2;
+.category .optional #ed_field{
+    width:120px;
+    height:47px;
+    font-size:16px;
+    stroke:2px solid #033075;
     color:#9D9D9D;
+    margin:23px 11px 0 0;
+    padding: 0 8px;
     border-radius: 5px;
-}
-.header img{
-    width:200px;
-    height:250px;
-    margin-top:-40px;
-    margin-left:300px;
 }
 
 /*카테고리*/
@@ -132,51 +168,80 @@ a {
 .category .optional #ed_target{
     width:120px;
     height:47px;
-    font-size:24px;
+    font-size:16px;
     stroke:2px solid #033075;
     color:#9D9D9D;
-    margin:23px 11px 0px 100px;
+    margin:23px 11px 0px 10px;
+    padding: 0 8px;
     border-radius: 5px;
 }
 .category .optional #ed_field{
     width:120px;
     height:47px;
-    font-size:24px;
+    font-size:16px;
     stroke:2px solid #033075;
     color:#9D9D9D;
-    margin:23px 11px 0px 27px;
+    margin:23px 11px 0 0;
+    padding: 0 8px;
     border-radius: 5px;
 }
 
 /*페이지네이션*/
-.page{
-    margin-top:50px;
-    margin-left:100px;
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap:40px 10px;
+.page_section{
+    margin: 50px 25px 50px 25px;
 }
-.page .section{
+.page_line1 {
+    display: flex;
+    justify-content: center;
+}
+.page_line2 {
+    display: flex;
+    justify-content: center;
+    
+}
+.page_section .page_box{
     border:2px solid #033075;
-    border-radius: 5px;
-    width:450px;
-    height:400px;
+    border-radius: 10px;
+    width: 350px;
+    height: 275px;
+    margin: 10px 10px;
 }
-.page .section p{
+.box_video{
+    width: 310px;
+    height: 130px;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+.box_content {
+    margin-top: 30px;
+}
+.page_box p{
     margin-left:20px;
-    margin-top:20px;
-    font-size:24px;
+    margin-bottom: 0;
+    font-size:16px;
     color:#9D9D9D;
 }
-.page .section .ed_name{
+.page_box .ed_name{
     color:#000000;
 }
-.page .section p a{
+.page_box a{
     color:#000000;
 }
-.page .section p a i{
-    margin-left:5px;
+.page_box i{
+    margin-left: 5px;
 }
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+  }
+  
+  .pagination a.active {
+    background-color: dodgerblue;
+    color: white;
+  }
 
 
 @media screen and (max-width: 576px) {
