--- a/Benefit/Benefit.css
+++ b/Benefit/Benefit.css
@@ -77,52 +77,88 @@ a {
 .navbar_toggleBtn:hover i:hover {
     color: #f0f4f5;
 }
-
-/*header*/
-.header{
-    background-color: #f0f4f5;
+/* Header section */
+.header_section {
+    background-color: #f5f7fa;
+    margin-top: 56px;
 }
-.header .title{
-    margin-left:20px;
-    padding-top:20px;
-    font-size:50px;
+.header p {
+    font-size: 32px;
+    margin: 8px;
+    padding: 10px 0 0 16px;
 }
-.header hr{
-    height: 3px;
-    background-color: #000000;
+.header_line {
+    border-top: 1px black solid;
 }
-.header .sub{
-    display:flex;
+input::placeholder {
+    font-size: 12px;
+    padding-left: 10px;
+    color: #9d9d9d;
 }
-.header .search_form{
-    padding-top:60px;
+.search_section {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
 }
-.header .search_education{
-    width:500px;
-    height:50px;
-    background-color: #F2F2F2;
-    margin-left:700px;
-    border-radius: 5px;
+.search_bar {
+    display: flex;
+    position: absolute;
+    margin-right: 155px;
 }
-.header .submit_education{
-    width:60px;
-    height:50px;
-    background-color: #F2F2F2;
-    color:#9D9D9D;
-    border-radius: 5px;
-}
-.header .category_education{
-    width:80px;
-    height:50px;
-    background-color: #F2F2F2;
-    color:#9D9D9D;
-    border-radius: 5px;
-}
-.header img{
+.search_bar input {
     width:250px;
-    height:200px;
-    margin-left:300px;
-    
+    height: 45px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    border: 2px solid #9d9d9d;
+}
+.searchBtn {
+    display: flex;
+    position: absolute;
+    margin-left: 140px;
+}
+.searchBtn button {
+    background-color: #f2f2f2;
+    border: 2px solid #9d9d9d;
+    width: 45px;
+    height: 45px;
+    border-radius: 5px;
+    padding: 10px;
+}
+.searchBtn i {
+    color: #9d9d9d;
+    padding: px;
+}
+.categoryBtn button {
+    color: #9d9d9d;
+    padding-top: 12px;
+    padding-left: 12px;
+    font-size: 12px;
+    border: none;
+}
+.category_benefit{
+    display: flex;
+    position: absolute;
+    margin-left: 287px;
+}
+
+.category_benefit button{
+    background-color: #f2f2f2;
+    border: 2px solid #9d9d9d;
+    width: 100px;
+    height: 45px;
+    border-radius: 5px;
+    padding: 10px;
+
+    color: #9d9d9d;
+}
+.consult_img {
+    margin-left: 1000px;
+    width: 250px;
+    height: 250px;
+    margin-top: -30px;
+    padding-top:40px;
 }
 
 /*카테고리*/
@@ -132,53 +168,83 @@ a {
 .category .optional #ed_target{
     width:120px;
     height:47px;
-    font-size:24px;
+    font-size:16px;
     stroke:2px solid #033075;
     color:#9D9D9D;
-    margin:23px 11px 0px 100px;
+    margin:23px 11px 0px 10px;
+    padding:0 8px;
     border-radius: 5px;
 }
 .category .optional #ed_field{
     width:120px;
     height:47px;
-    font-size:24px;
+    font-size:16px;
     stroke:2px solid #033075;
     color:#9D9D9D;
-    margin:23px 11px 0px 27px;
+    margin:23px 11px 0 0;
+    padding: 0 8px;
     border-radius: 5px;
 }
 
 /*페이지네이션*/
-.page{
-    margin-top:50px;
-    margin-left:100px;
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap:40px 90px;
+.page_section{
+    margin: 50px 25px 50px 25px;
 }
-.page .section{
+.page_line1 {
+    display: flex;
+    justify-content: center;
+}
+.page_line2 {
+    display: flex;
+    justify-content: center;
+    
+}
+.page_section .page_box{
     border:2px solid #033075;
-    border-radius: 5px;
-    width:450px;
-    height:550px;
+    border-radius: 10px;
+    width: 350px;
+    height: 275px;
+    margin: 10px 10px;
 }
-
-.page .section p{
+.box_content {
+    margin-top: 30px;
+}
+.page_box p{
     margin-left:20px;
-    margin-top:20px;
-    font-size:24px;
+    margin-bottom: 0;
+    font-size:16px;
     color:#9D9D9D;
 }
-.page .section .ed_name{
-    font-size:40px;
+.page_box .ed_name{
+    color:#000000;
+    font-size:20px;
+    padding-bottom:10px;
+}
+.page_box a{
     color:#000000;
 }
-.page .section p a{
-    color:#000000;
+.page_box i{
+    margin-left: 5px;
 }
-.page .section p a i{
-    margin-left:5px;
-}
+.pagination a {
+    margin-top: 50px;
+    color: black;
+    padding: 8px 8px;
+    text-decoration: none;
+    transition: background-color .3s;
+  }
+  .pagination a:hover {
+    background-color: dodgerblue ;
+    color: white;
+    border-radius: 50px;
+    height: 25px;
+  }
+  .pagination a.active {
+    background-color: dodgerblue;
+    color: white;
+    border-radius: 50px;
+    height: 25px;
+  }
 
 @media screen and (max-width: 576px) {
     .navbar {
