--- a/Education/Education.css
+++ b/Education/Education.css
@@ -25,13 +25,14 @@ a {
 .navbar_logo img {
     width: 130px;
     height: 25px;
-    margin-left: 20px;
+    margin-left: 15px;
 }
 .navbar_menu {
     display: flex;
     list-style: none;
     padding-left: 0;
     margin-bottom: 0;
+    margin-right: 90px;
 }
 .navbar_menu li {
     padding: 8px 12px;
@@ -89,6 +90,20 @@ a {
 }
 .header_line {
     border-top: 1px black solid;
+}
+.subheader {
+    font-size: 28px;
+    margin-top: 50px;
+}
+.subheader .blue {
+    color: #006ae2;
+}
+.header_section .line {
+    width: 210px;
+    border: 5px solid #f1e6a7;
+    z-index: -1;
+    margin-top: -30px;
+    margin-left: 412px;
 }
 input::placeholder {
     color: #9d9d9d;
@@ -265,12 +280,18 @@ input::placeholder {
         align-items: flex-start;
         padding: 8px 24px;
     }
+    .navbar_logo{
+
+        margin-right: 115px;
+        align-items: start;
+    }
     .navbar_menu{
         display: none;
         flex-direction: column;
         align-items: center;
         width: 100%;
         margin-bottom: 20px;
+        margin-top: 10px;
     }
     .navbar_menu li{
         width: 100%;
@@ -279,6 +300,7 @@ input::placeholder {
     .navbar_login {
         display: none;
         justify-content: center;
+        margin-right: 90px;
         width: 100%;
     }
     .navbar_toggleBtn{
