--- a/Benefit/Benefit.css
+++ b/Benefit/Benefit.css
@@ -26,13 +26,14 @@ a {
 .navbar_logo img {
     width: 130px;
     height: 25px;
-    margin-left: 20px;
+    margin-left: 15px;
 }
 .navbar_menu {
     display: flex;
     list-style: none;
     padding-left: 0;
     margin-bottom: 0;
+    margin-right: 90px;
 }
 .navbar_menu li {
     padding: 8px 12px;
@@ -79,50 +80,87 @@ a {
 }
 
 /*header*/
-.header{
-    background-color: #f0f4f5;
+.header_section {
+    background-color: #e2edff   ;
+    margin-top: 56px;
 }
-.header .title{
-    margin-left:20px;
-    padding-top:20px;
-    font-size:50px;
+.header p {
+    font-size: 32px;
+    margin: 8px;
+    padding: 10px 0 0 16px;
 }
-.header hr{
-    height: 3px;
-    background-color: #000000;
+.header_line {
+    border-top: 1px black solid;
 }
-.header .sub{
-    display:flex;
+.subheader {
+    font-size: 28px;
+    margin-top: 70px;
 }
-.header .search_form{
-    padding-top:60px;
+.subheader .blue {
+    z-index: 100;
+    color: #006ae2;
 }
-.header .search_education{
-    width:500px;
-    height:50px;
-    background-color: #F2F2F2;
-    margin-left:700px;
-    border-radius: 5px;
+.subheader_line {
+    display: flex;
+    justify-content: center;
 }
-.header .submit_education{
-    width:60px;
-    height:50px;
-    background-color: #F2F2F2;
-    color:#9D9D9D;
-    border-radius: 5px;
+.subheader_line .line {
+    width: 210px;
+    height: 15px;
+    background-color: #f1e6a7;
+    margin-right: 166px;
+    margin-top: -32px;
+    z-index: 10;
 }
-.header .category_education{
-    width:80px;
-    height:50px;
-    background-color: #F2F2F2;
-    color:#9D9D9D;
-    border-radius: 5px;
+input::placeholder {
+    color: #9d9d9d;
 }
-.header img{
+.search_section {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    margin-top: -30px;
+}
+.search_bar {
+    display: flex;
+    position: absolute;
+    margin-right: 75px;
+}
+.search_bar input {
     width:250px;
-    height:200px;
-    margin-left:300px;
-    
+    height: 45px;
+    border-radius: 5px;
+    background-color: #fcfcfc;
+    border: 2px solid #9d9d9d;
+    padding-left: 10px;
+    font-size: 12px;
+}
+.searchBtn {
+    display: flex;
+    position: absolute;
+    margin-left: 220px;
+}
+.searchBtn button:hover {
+    border: 2px solid black;
+}
+.searchBtn button {
+    background-color: #fcfcfc;
+    border: 2px solid #9d9d9d;
+    width: 45px;
+    height: 45px;
+    border-radius: 5px;
+    padding: 10px;
+}
+.searchBtn i {
+    color: #9d9d9d;
+    padding: px;
+}
+.header_img {
+    margin-left: 980px;
+    width: 220px;
+    height: 220px;
+    margin-top: -50px;
 }
 
 /*카테고리*/
@@ -132,53 +170,97 @@ a {
 .category .optional #ed_target{
     width:120px;
     height:47px;
-    font-size:24px;
+    font-size:16px;
     stroke:2px solid #033075;
     color:#9D9D9D;
-    margin:23px 11px 0px 100px;
+    margin:23px 11px 0px 10px;
+    padding: 0 8px;
     border-radius: 5px;
+}
+#ed_target:hover {
+    border: 2px solid black;
 }
 .category .optional #ed_field{
     width:120px;
     height:47px;
-    font-size:24px;
+    font-size:16px;
     stroke:2px solid #033075;
     color:#9D9D9D;
-    margin:23px 11px 0px 27px;
+    margin:23px 11px 0 0;
+    padding: 0 8px;
     border-radius: 5px;
 }
+#ed_field:hover {
+    border: 2px solid black;
+}
+
 
 /*페이지네이션*/
-.page{
-    margin-top:50px;
-    margin-left:100px;
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap:40px 90px;
+.page_section{
+    margin: 50px 25px 50px 25px;
 }
-.page .section{
+.page_line1 {
+    display: flex;
+    justify-content: center;
+}
+.page_line2 {
+    display: flex;
+    justify-content: center;
+}
+.page_section .page_box{
     border:2px solid #033075;
-    border-radius: 5px;
-    width:450px;
-    height:550px;
+    border-radius: 10px;
+    width: 350px;
+    height: 260px;
+    margin: 10px 10px;
 }
-
-.page .section p{
-    margin-left:20px;
-    margin-top:20px;
-    font-size:24px;
+.box_content {
+    margin-top: 15px;
+}
+.smallbox {
+    border: 2px solid #006ae2;
+    border-radius: 5px;
+    width: 100px;
+    height: 35px;
+    margin: 8px 20px;
+    text-align: center;
+    padding-top: 4px;
+}
+.page_box p{
+    margin: 0 20px;
+    margin-bottom: 0;
+    font-size:16px;
     color:#9D9D9D;
 }
-.page .section .ed_name{
-    font-size:40px;
+.page_box .ed_name{
     color:#000000;
+    font-size: 30px;
 }
-.page .section p a{
-    color:#000000;
+.page_box:hover{
+    background: #f6fbfe;
+    border: 2px solid dodgerblue;
 }
-.page .section p a i{
-    margin-left:5px;
+.page_box ul {
+    color: #9d9d9d;
+    margin-left: 10px;
 }
+.pagination a {
+    margin-top: 50px;
+    color: black;
+    padding: 8px 8px;
+    text-decoration: none;
+    transition: background-color .3s;
+  }
+  .pagination a:hover {
+    background-color: dodgerblue ;
+    color: white;
+    border-radius: 50px;
+  }
+  .pagination a.active {
+    background-color: dodgerblue;
+    color: white;
+    border-radius: 50px;
+  }
 
 @media screen and (max-width: 576px) {
     .navbar {
