--- a/Education/Education.css
+++ b/Education/Education.css
@@ -155,36 +155,11 @@ input::placeholder {
     color: #9d9d9d;
     padding: px;
 }
-.consult_img {
+.header_img {
     margin-left: 980px;
     width: 220px;
     height: 220px;
     margin-top: -50px;
-}
-
-/* category section */
-.category{
-    display:flex;
-}
-.category .optional #ed_target{
-    width:120px;
-    height:47px;
-    font-size:16px;
-    stroke:2px solid #033075;
-    color:#9D9D9D;
-    margin:23px 11px 0px 10px;
-    padding: 0 8px;
-    border-radius: 5px;
-}
-.category .optional #ed_field{
-    width:120px;
-    height:47px;
-    font-size:16px;
-    stroke:2px solid #033075;
-    color:#9D9D9D;
-    margin:23px 11px 0 0;
-    padding: 0 8px;
-    border-radius: 5px;
 }
 
 /*카테고리*/
