main 페이지 css 수정

--- a/main/style.css
+++ b/main/style.css
@@ -33,6 +33,7 @@ a {
     list-style: none;
     padding-left: 0;
     margin-bottom: 0;
+    margin-right: 90px;
 }
 .navbar_menu li {
     padding: 8px 12px;
@@ -80,7 +81,7 @@ a {
 /* main */
 .main{
     white-space: nowrap; /*가로 폭이 줄어들었을 때 자동 줄바꿈이 일어나지 않도록함*/
-    margin-top: 65px; 
+    margin-top: 56px; 
 }
 .main p{
     color:#4D4D4D;
@@ -183,21 +184,22 @@ a {
     background-color:#F5F7FA;
     display:flex;
     padding-top:10px;
-    padding-bottom:20px;
+    margin-bottom:10px;
 }
 .fourth img{
     margin-left: 60px;
 }
 .fourth .fourth_text{
-    padding-top: 30px;
-    margin-left: 100px;
+    margin-left:100px;
+    margin-bottom:10px;
+    padding-top:30px;
 }
 .fourth .fourth_text .fourth_main{
     font-size:50px;
 }
 .fourth .fourth_text .fourth_sub{
     font-size:18px;
-    margin-left: 5px;
+    margin-left: 8px;
     color:#717171;
 }
 .fourth .education{
@@ -216,13 +218,16 @@ a {
 /* main > fifth */
 .fifth{
     display:flex;
+    padding-top:10px;
+    margin-bottom:10px;
 }
 .fifth img{
-    margin-left: 35px;
+    margin-left: 90px;
 }
 .fifth .fifth_text{
-    margin-left: 120px;
-    margin-top:20px;
+    margin-left:140px;
+    margin-bottom:10px;
+    padding-top:30px;
 }
 .fifth .fifth_main{
     font-size:50px;
@@ -277,6 +282,7 @@ a {
     /* main */
     .main{
         white-space: initial;
+        margin-top:42px;
     }
 
     /*main > first */
@@ -285,7 +291,7 @@ a {
     }
     .first img{
         width:50px;
-        margin-top:32px;
+        margin-top:2px;
     }
 
     /* main > second */
@@ -336,7 +342,7 @@ a {
         font-size:20px;
     }
     .third .third_text .third_sub{
-        font-size:14px;
+        font-size:12px;
     }
     .third .third_text .benefit{
         width:100px;
@@ -361,7 +367,7 @@ a {
         font-size:20px;
     }
     .fourth .fourth_text .fourth_sub{
-        font-size:14px;
+        font-size:12px;
     }
     .fourth .education{
         width:100px;
@@ -374,10 +380,9 @@ a {
     }
     /* main > fifth*/
     .fifth img{
-        margin-left:0px;
+        margin-left:20px;
         width:180px;
         height:180px;
-        margin-right: 20px;
     }
     .fifth .fifth_text{
         margin-left:20px;
@@ -386,7 +391,7 @@ a {
         font-size:20px;
     }
     .fifth .fifth_sub{
-        font-size:14px;
+        font-size:12px;
     }
     .fifth .fifth_text .professor{
         width:100px;
